force-app/main/default/objects/Collection__c/Collection__c.object-meta.xml
<CustomObject>
    <label>Collection</label>
    <pluralLabel>Collections</pluralLabel>
    <description>Collection</description>
    <nameField>
        <label>Collection Name</label>
        <type>AutoNumber</type>
        <displayFormat>FCOL-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>