force-app/main/default/objects/Collection__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Field Collections</relationshipLabel>
    <relationshipName>Field_Collections</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
</CustomField>